--- a/expe.tex
+++ b/expe.tex
@@ -189,7 +189,7 @@ The error is however somewhat reduced by the non-ellipsoidal shape of the partic
 \todo{add the previous and resulting statistics? the THz spectra should better go to the Results }
 %}}}
 
-\section{Laser micro-machining}
+\section{Laser micromachining}
 \paragraph{Fabrication of dielectric bars}%{{{
 Dielectric or metallic structures can be made by cutting a thin polished slab of the given material. For instance, metamaterials designed to operate around 1 THz, which corresponds to the free-space wavelength of 0.3 mm, have their unit cells of a similar size or less, and the finest features are usually an order of magnitude smaller. 
 A similar sample used in experiment consisted of bars from strontium titanate (SrTiO$_{3}$) with a rectangular cross-section (see Fig. \ref{fg_STO_bar_geom}), 
