--- a/title.tex
+++ b/title.tex
@@ -105,7 +105,7 @@ The comparison of different structures encompassed in this thesis attempts to pr
 Another objective of the presented results is to demonstrate the capabilities of the simulation environment, which the author developed and completely published online to stimulate further research in this field. 
 
 % TODO Z abstraktu musí být zřejmé, co je cílem předložené práce a jakých vědeckých výsledků doktorand osobně dosáhl.
-
+%% + attention was focused to the parts of different topics, where the author's work could contribute with new knowledge
 %\endgroup
 
 \thispagestyle{empty} \newpage
@@ -113,7 +113,7 @@ Another objective of the presented results is to demonstrate the capabilities of
 \chapter*{Acknowledgements}
 Preparation of this thesis was not without difficulties. However, it appears that overcoming such difficulties is essential to gain some sort of valuable knowledge that can not be conveyed through textbooks, and of experience that can not be gained through straightforward and focused work only.  At the first place I wish to express thanks to my advisor, Dr. Filip Kadlec, and all other people who helped this project to be finished, namely Dr. Christelle Kadlec and doc. Petr Ku\v{z}el  from the Institute of Physics, and doc. Ivan Richter from the Faculty of Nuclear Engineering and Physical sciences, Czech Technical University. 
 
-Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me of the value in proper handling of the theoretical background, which later proved essential for explaining the results of the thesis. During my stay in France in 2013, the collaboration with Dr. Matthias Vanwolleghem not only greatly contributed to my experience with the numerical simulations, but was also very inspiring. 
+Discussions with doc. Lukáš Jelínek and prof. Jan Macháč convinced me about the value in proper handling of the theoretical background, which later proved essential for explaining the results of the thesis. During my stay in France in 2013, the collaboration with Dr. Mathias Vanwolleghem not only greatly contributed to my experience with the numerical simulations, but was also very inspiring. 
 
 Almost surprisingly, all my scientific aspirations found a permanent and selfless support of my wife and all family members, who always had patience with my focusing on abstract problems instead of the more practical aims and with my stubborn attitude towards some of their good advices.
 
